<resources>
    <string name="app_name">LoginAppusingFirebase</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="register_me">Register me</string>
    <string name="clicktologin" />
    <string name="click_to_register">click to Register</string>
    <string name="click_to_login">click to login</string>
    <string name="logout">logout</string>
    <string name="email">email</string>
</resources>